--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p id="winner"></p>
-    <script src="js/script.js"></script>
+    <script src="js/mail.js"></script>
 </body>
 </html>
